[project]
name = "Vizualization"
version = "0.1.0"
description = ""
authors = [
    {name = "Vyacheslav Tsay",email = "tsayvyac@fel.cvut.cz"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "pandas (<3.0.0)",
    "plotly (>=6.6.0,<7.0.0)",
    "streamlit (>=1.55.0,<2.0.0)",
    "pandas-stubs (>=2.3.3,<2.4.0)",
    "numpy (>=2.4.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "baseball", from = "src"}]

[tool.poetry.scripts]
start = "baseball.app:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
